--- a/assets/styles/Dish.css
+++ b/assets/styles/Dish.css
@@ -1,6 +1,7 @@
 .Dish {
     width: 80%;
-    margin: 80px auto;
+    margin: 50px auto;
+    
     
 }
 .line{
@@ -9,12 +10,16 @@
     background: var(--primary-color);
     margin: 10px auto;
     border-radius: 5px;
+    justify-content: center;
+    align-items: center;
     }
+
 
 .dish-content {
     text-align: center;
     font-size: 4vmin;
     color: rgb(112, 103, 103);
+
 }
 .dish-content h1{
     justify-content: center;
@@ -23,6 +28,39 @@
 
 
 }
+.dish-content{
+    padding: 80px;
+
+}
+.menu{
+    display: flex;
+    
+    justify-content: center;
+    gap: 20px;
+
+}
+
+.Names {
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #ff4d4d;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+
+
+.image img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 10px;
+    border-radius: 8px;
+
+}
+
+
 .scroll-container{
     margin-top: 20px;
     width: 100%;
@@ -46,4 +84,84 @@
 ::-webkit-scrollbar{
     scroll-behavior: smooth;
     display: none;
+}
+
+.icon-container{
+    background-color: #e9b9a6;
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    justify-content: center;
+
+    
+}
+
+.icon-container .icons{
+    background: #fff;
+    border: 1rem solid rgba(0,0,0,.1);
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
+    padding: 1px 15px;
+    border-radius: 15px;
+   
+}
+
+.icon-container .icon img {
+     height: 1rem;
+     margin-right: 1rem;
+     justify-content: center;
+     align-items:center ;
+     border-radius: 15px;
+}
+.icon-container .icon h3{
+    color: #333;
+    padding-bottom: .5rem;
+    font-size: 1.4rem;
+}
+
+.icon-container .icon span{
+    color: #555;
+    font-size: 1.3rem;
+}
+
+
+@media only screen and (max-width: 1280px) {
+    
+
+    .icon-container .icon h3{
+    font-size: 2rem;
+}
+
+.icon-container .icon span{
+    font-size: 1.7rem;
+}
+    
+.scroll-container{
+    margin-top: 20px;
+    width: 95%;
+    height: 50vh;
+    padding: 0 10px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+
+.scroll-container .wrapper{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1rem;
+}
+}
+
+@media only screen and (max-width: 6px) {
+
+
+
 }
