--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -1,6 +1,6 @@
 .hero{
     height: 100vh;
-    background-image: url(/assets/images/hero-bg.jpg);
+    background-image: url(../images/bg-img.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,7 +26,7 @@
 
 .hero-content{
    max-width: 800px;
-   margin: 0 auto;
+   margin:  auto;
    position: relative;
    z-index: 1;
    color: white;
@@ -35,7 +35,7 @@
 
 .hero h1{
     font-family: 'Playfair Display', serif; 
-    font-size: 4rem;
+    font-size: 6rem;
     scroll-margin-bottom: 20px;
     color: white;
     line-height: 1.2;
@@ -59,12 +59,32 @@
     justify-content: center;
 }
 
-@media (max-width: 768px){
+
+@media only screen and (max-width: 1020px){
     .hero-btns{
         flex-direction: column;
-        gap: 20px
-
-         
+        gap: 20px;
+    
     }   
+    .hero h1{
+    
+    font-size: 2.7em;
+    }
 
+.hero p{
+    
+    font-size: 1.5rem;
+   
+}
+.hero-content{
+   max-width: 400%;
+   
+}
+}
+@media only screen and (max-width: 764px) {
+
+.hero{
+   max-width: 400%;
+   
+}
 }
