--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -1,4 +1,9 @@
 .navbar{
+    
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: var(--white);
     padding: 20px 0;
     box-shadow: 0 2px 10px rgb(100, 100, 100);
@@ -12,6 +17,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px;
 
 }
 
@@ -126,13 +132,16 @@ nav ul li{
     display: none;
     flex-direction: column;
     position: absolute;
-    top: 60px;
+    top: 15px;
     left: 0;
     text-align: center;
-    background: #fcfcfc;
+    background: #333333;
     padding-bottom: 20px;
   }
   
+  .nav-links.active{
+    display: flex;
+  }
   .menu-btn {
     display: inline-block;
   }
