new file:   assets/images/Crispy Pata.jpg 	new file:   assets/images/Filipino.webp 	new file:   assets/images/christian.jpg 	new file:   assets/images/daing.jpeg 	new file:   assets/images/daing.jpg 	new file:   assets/images/embutido.jpg 	new file:   assets/images/emman.jpg 	new file:   assets/images/escabetche.jpg 	new file:   assets/images/escabetche.webp 	new file:   assets/images/inun unan.jpg 	new file:   assets/images/janlo.jpg 	new file:   assets/images/letchgon.jpg 	new file:   assets/images/letchon.jpg 	new file:   assets/images/miguel.jpg 	new file:   assets/images/payment.jpg 	new file:   assets/images/sergs.jpg 	new file:   assets/styles/about.css 	new file:   assets/styles/contact.css 	deleted:    assets/styles/food.css 	new file:   assets/styles/footer.css 	new file:   assets/styles/reviews.css 	deleted:    assets/styles/row.css 	modified:   assets/styles/style.css 	new file:   assets/styles/submission.css 	modified:   pages/About.html 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	deleted:    pages/Pages.html 	new file:   pages/Reviews.html 	modified:   pages/index.html 	new file:   pages/submission.html

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,12 @@ xl: 1280px -- larger wide desktop size
 @import "about.css";
 @Import "Dish.css";
 @import "food.css";
+@import "about.css";
+@import "footer.css";
+@import "contact.css";
+@import "submission.css";
+@import "reviews.css";
+
 
 *{
     padding: 0;
