modified:   assets/styles/Dish.css 	new file:   assets/styles/booking.css 	modified:   assets/styles/hero.css 	modified:   assets/styles/navbar.css 	modified:   assets/styles/reviews.css 	new file:   assets/styles/row.css 	modified:   pages/Contact.html 	modified:   pages/Menu.html 	modified:   pages/Reviews.html 	new file:   pages/booking.html 	modified:   pages/index.html

--- a/assets/styles/navbar.css
+++ b/assets/styles/navbar.css
@@ -135,7 +135,7 @@ nav ul li{
     top: 15px;
     left: 0;
     text-align: center;
-    background: #333333;
+    background: #ffffff;
     padding-bottom: 20px;
   }
   
