--- a/assets/styles/Dish.css
+++ b/assets/styles/Dish.css
@@ -33,10 +33,14 @@
 
 }
 .menu{
-    display: flex;
-    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    flex: wrap;
     justify-content: center;
     gap: 20px;
+    padding: 20px;
+    
+    
 
 }
 
@@ -49,7 +53,24 @@
     text-align: center;
 }
 
+.box {
+    flex:1 1 25px;
+    max-width: 300px;
+    min-width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    padding: 15px;
+   
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    position: relative;
 
+}
 
 .image img {
     width: 100%;
@@ -160,8 +181,16 @@
 }
 }
 
-@media only screen and (max-width: 6px) {
+@media only screen and (max-width: 640px) {
 
+.image img {
+    width: 100%;
+}
 
-
+.dish-content h1 {
+    font-size: 30px;
+}
+.line{
+    width: 65%;
+}
 }
